index link fixed.

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 			<div id="socialmedia">
-				<a href="home.html">
+				<a href="index.html">
 					<i class="fa fa-home fa-2x" aria-hidden="true"></i>
 				</a>
 			</div>
