totally changed to bootstrap

--- a/about.html
+++ b/about.html
@@ -1,52 +1,135 @@
-<html>
-	<head>
-		<title>APMyuki</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="main.css" />
-		<link rel="stylesheet" href="about.css" />
-		<link rel="stylesheet" href="css/font-awesome.min.css">
-	</head>
-	<body>
-			<div id="socialmedia">
-				<a href="index.html">
-					<i class="fa fa-home fa-2x" aria-hidden="true"></i>
-				</a>
-			</div>
-			<div>
-				<img id="banner" src="images/banner.jpg">
-				<div id="header">
-					<div>
-						<img src="images/logo.png">
-					</div>
-					<div>
-						<ul>
-							<li><a href="https://www.facebook.com/apmyuki/" target="_blank"><img src="icons/facebook.png"></a></li>
-							<li><a href="mailto:apmyuki@gmail.com" target="_top"><img src="icons/mail.png"></a></li>
-							<li><a href="#" target="_blank"><img src="icons/instagram.png"></a></li>
-							<li><a href="#" target="_blank"><img src="icons/pinterest.png"></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div id="horizonp"></div>
-			<div id="horizont"></div>
-			<div id="photo">
-				<img src="images/yuchi.jpg">
-			</div>
-			<div id="about">
-				<h1>Yu-Chi, Lin</h1>
-				<div id="content">
-					<h4>Education</h4>
-					<blockquote>abdee malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.
-					</blockquote>
-				</div>
-				<div id="content">
-					<h4>Experiences</h4>
-					<blockquote>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue12121 elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.
-					</blockquote>
-				</div>
-			</div>
-			
-	</body>
-</html>			
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>about - APMyuki</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="about.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+
+  </head>
+
+  <body>
+    <!-- banner -->
+    <div class="jumbotron" id="top">
+      <div class="logo">
+        <a href="index.html"><img src="images/logo.png"></a>
+      </div>
+      <div class="socialbtn">
+         <a href="https://www.facebook.com/apmyuki/" target="_blank">
+          <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i>
+        </a>
+        <a href="#" target="_blank">
+          <i class="fa fa-envelope-square fa-3x" aria-hidden="true"></i>
+        </a>
+        <a href="#" target="_blank">
+          <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+        </a>
+        <a href="#" target="_blank">
+          <i class="fa fa-pinterest-square fa-3x" aria-hidden="true"></i>
+        </a>
+      </div>
+    </div> 
+    
+    <!-- horizontal line -->
+    <div class="container, horizont"></div>
+    <div class="container, horizonn"></div>
+    <!-- photo -->
+    <img src="images/yuchi.jpg"  class="img-rounded" alt="YuChi">
+    <!-- content -->
+    <div class="page-header">
+        <h2>Yu-Chi, Lin</h2>
+    </div>
+    <div class="content">
+      <h4>Education</h4>
+      <blockquote>
+        <p><b>2009-2013</b></p>
+        National Sun Yat-Sen University<br>
+        Bachelor of Science<br>
+        Dept. of Mechanical and Electromechanical Engineering<br>
+        <p><b>2013-2015</b></p>
+        National Cheng Kung University<br>
+        Master of Science<br>
+        Dept. of Industrial Design (Interaction Design)<br>
+        Advisor: Professor Fong-Gong, Wu<br>
+      </blockquote>
+      <h4>Specialty</h4>
+      <blockquote>
+        <ul style="list-style-type:square">
+          <li>Graphic design</li>
+          <li>CIS(corporate identity system) design</li>
+          <li>User interface design/coding</li>
+          <li>Front-end developing</li>
+          <li>User experience developing</li>
+          <li>Free hand sketching</li>
+          <li>Design methods</li>
+          <li>EMG device operation, data collect and analysis</li>
+        </ul>
+      </blockquote>
+      <h4>Softwares</h4>
+      <blockquote>
+        <ul style="list-style-type:square">
+          <li>Adobe Illustrator</li>
+          <li>Adobe Photoshop</li>
+          <li>Autodesk Sketchbook pro</li>
+          <li>Spine<small>2.5D animation</small></li>
+          <li>Microsoft office series</li>
+        </ul>
+      </blockquote>
+      <h4>Coding abilities</h4>
+      <blockquote>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>Bootstrap</li>
+        </ul>
+      </blockquote>
+      <h4>Experiences</h4>
+      <blockquote>
+        <p><b>2008</b></p>
+        Art director of Kang-Fu Club, TNFSH.<br>
+        <p><b>2011-2013</b></p>
+        Art director of Power Dance Club, NSYSU.<br>
+        <p><b>2013-2015</b></p>
+        Research assistant of Dept. of Industrial Design of National Cheng Kung University.<br>
+        <p><b>2014</b></p>
+        Exchange student to University of Tasmania<br>
+        <p><b>2015</b></p>
+        Paper Publication/Oral presentation on AHFE(Applied Human Factors and Ergonomics) in LasVegas<br>
+        <p><b>2015</b></p>
+        Master Thesis Publication: Innovation Handle Design and Evaluation of Woks for Middle-Aged and Elderly people.<br>
+        <p><b>2016</b></p>
+        Line sticker "Athletic Ape" published.<br>
+        <p><b>2013-present</b></p>
+        Zoo T-icket T-shirt designer.<br>
+        <p><b>2013-present</b></p>
+        Taiwanize T-shirt designer.<br>
+        <p><b>2016-present</b></p>
+        Front-end developer of Precoo<br>
+      </blockquote>
+    </div>
+    <!--footer-->
+    <footer class="footer">
+      <div class="row">
+        <div class="col-xs-8 col-xs-offset-2">  
+          <a href="index.html">
+            <i class="fa fa-home fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
+        <div class="col-xs-2">
+          <a href="#top">
+            <i class="fa fa-chevron-circle-up fa-2x backtotop" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
+  </body>
