change menu button from pagination to col

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container, horizonn"></div>
 
     <div class="container">
-      <ul class="pagination">
+      <!--<ul class="pagination">
         <li>
             <a href="about.html">
               <div>
@@ -90,7 +90,51 @@
               </div>
             </a>
         </li>
-      </ul>
+      </ul>-->
+      <div class="row">
+        <div class="col-xs-12 col-sm-4 col-md-2 col-md-offset-1">
+          <a href="about.html">
+            <div class="menu">
+              <img src="icons/about.png"><br>
+              <p>about</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-2">
+          <a href="#">
+            <div class="menu">
+              <img src="icons/uidesign.png"><br>
+              <p>UI design</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-2">
+          <a href="#">
+            <div class="menu">
+              <img src="icons/cisdesign.png"><br>
+              <p>CIS design</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-2">
+          <a href="#">
+            <div class="menu">
+              <img src="icons/graphicdesign.png"><br>
+              <p>graphic design</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-2">
+          <a href="#">
+            <div class="menu">
+              <img src="icons/paintingworks.png"><br>
+              <p>painting works</p>
+            </div>
+          </a>
+        </div>
+        <div class="col-md-1">
+        </div>
+      </div>
       <p class="bottom">APM, 2016. Personal website/ portfolio.</p>
     </div>
  <!--   <div class="page-header">
