--- a/about.html
+++ b/about.html
@@ -24,19 +24,23 @@
       <div class="logo">
         <a href="index.html"><img src="images/logo.png"></a>
       </div>
-      <div class="socialbtn">
-         <a href="https://www.facebook.com/apmyuki/" target="_blank">
-          <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i>
-        </a>
-        <a href="#" target="_blank">
-          <i class="fa fa-envelope-square fa-3x" aria-hidden="true"></i>
-        </a>
-        <a href="#" target="_blank">
-          <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
-        </a>
-        <a href="#" target="_blank">
-          <i class="fa fa-pinterest-square fa-3x" aria-hidden="true"></i>
-        </a>
+      <div class="row">
+        <div class="col-xs-6 col-xs-offset-3">
+          <div class="socialbtn">
+            <a href="https://www.facebook.com/apmyuki/" target="_blank">
+              <i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i>
+            </a>
+            <a href="#" target="_blank">
+              <i class="fa fa-envelope-square fa-3x" aria-hidden="true"></i>
+            </a>
+            <a href="#" target="_blank">
+              <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+            </a>
+            <a href="#" target="_blank">
+              <i class="fa fa-pinterest-square fa-3x" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </div> 
     
