page graphic design added

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="col-xs-12 col-sm-4 col-md-2 col-md-offset-1">
           <a href="about.html">
             <div class="menu">
-              <img src="icons/about.png"><br>
+              <img src="icons/about.svg"><br>
               <p>about</p>
             </div>
           </a>
@@ -103,7 +103,7 @@
         <div class="col-xs-12 col-sm-4 col-md-2">
           <a href="#">
             <div class="menu">
-              <img src="icons/uidesign.png"><br>
+              <img src="icons/uidesign.svg"><br>
               <p>UI design</p>
             </div>
           </a>
@@ -111,15 +111,15 @@
         <div class="col-xs-12 col-sm-4 col-md-2">
           <a href="#">
             <div class="menu">
-              <img src="icons/cisdesign.png"><br>
+              <img src="icons/cisdesign.svg"><br>
               <p>CIS design</p>
             </div>
           </a>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-2">
-          <a href="#">
+          <a href="graphicdesign.html">
             <div class="menu">
-              <img src="icons/graphicdesign.png"><br>
+              <img src="icons/graphicdesign.svg"><br>
               <p>graphic design</p>
             </div>
           </a>
@@ -127,7 +127,7 @@
         <div class="col-xs-12 col-sm-4 col-md-2">
           <a href="#">
             <div class="menu">
-              <img src="icons/paintingworks.png"><br>
+              <img src="icons/paintingworks.svg"><br>
               <p>painting works</p>
             </div>
           </a>
